# d2x

./: CMakeLists.txt  README.md  app.js  app_conf.json  d2x.html  gps.js  index.html  index.js  osm_navi.html  package-lock.json  package.json  receiver.py
app/client/: index.html  index.js
client/: README.md  index.html  index.js  package-lock.json
client/socket/cpp/: CMakeLists.txt  gps.cpp  gps.hpp  main.cpp  nmea_format.json  serial.cpp  serial.hpp  socket.cpp  socket.hpp
client/socket/js/: gps.js
sensord/: main.cpp
sensord/cpp/gpsd/: gps.cpp  gps.hpp
sensord/cpp/socketd/: socket_client.hpp  socket_server.cpp  socket_server.hpp
sensord/gpsd/: gps.cpp  gps.hpp
sensord/gpsd/js/: gps.js
sensord/gpsd/python/: gps.py  manager.py  nmea_parser.py  requirements.txt
sensord/js/: gps.js
sensord/python/: cam.py  gps.py  manager.py  mqtt_client.py  mqtt_publisher.py  mqtt_server.py  mqtt_subscriber.py  runner.py
sensord/seriald/: serial.cpp  serial.hpp
sensord/socketd/: socket_client.cpp  socket_client.hpp  socket_server.cpp  socket_server.hpp
server/: README.md  db_manager.js
server/socket/cpp/: CMakeLists.txt  main.cpp  socket.cpp  socket.hpp
socket/: CMakeLists.txt  gps.cpp  gps.hpp  nmea_format.json  nmea_struct.hpp  serial.cpp  serial.hpp
socket/cpp/: gps.hpp  main.cpp  nmea_format.json  serial.hpp
style/: style.css
tools/: mosquitto.conf
